# gtestbadge

./: .travis.yml  CHANGES  CMakeLists.txt  INSTALL.md  README.md  appveyor.yml
ci/appveyor/: build_library.bat  emulate_appveyor.bat  test_script.bat
ci/travis/: build_library.sh  emulate_travis.sh
cmake/: gtestbadge-config-version.cmake.in  gtestbadge-config.cmake.in
icons/: Downloads - Creative Commons.website
include/gtestbadge/: Badge.h  BadgeEventListener.h
samples/: CMakeLists.txt  samples.cpp
src/: gtestbadge.sln
src/gtestbadge/: Badge.cpp  Badge.h  BadgeEventListener.cpp  BadgeEventListener.h  BadgeTemplate.cpp  BadgeTemplate.h  BadgeTemplate.rc  CMakeLists.txt  SvgTemplate.cpp  SvgTemplate.h  SvgTemplate.rc  TestBadge.cpp  TestBadge.h  TestBadgeEventListener.cpp  TestBadgeEventListener.h  TestBar.cpp  TestFoo.cpp  config.h.in  gtestbadge.vcxproj  gtestbadge.vcxproj.filters  main.cpp  rapid.cpp  rapid.h  verdana.h  version.h.in
test/: CMakeLists.txt  ImageListBuilder.cpp  ImageListBuilder.h  TestBadge.cpp  TestBadgeEventListener.cpp  TestBar.cpp  TestBar.h  TestFoo.cpp  TestFoo.h  TestSystem.cpp  TestSystem.h  main.cpp  rapid.h  subtests.cpp
